--- a/基础组件/mysql/事务解读.md
+++ b/基础组件/mysql/事务解读.md
@@ -211,6 +211,17 @@ show engine innodb status 查看锁相关的部分：
 事务隔离级别
 
 sql 标准中定义了四种隔离级别，并规定了每种隔离级别下上述几个问题是否存在。
+1. 读未提交（read uncommitted）一个事务还没提交时，它修改的数据都可以被别的事物看到。
+
+2. 读已提交(read committed) 一个事务提交之后，它修改的数据才会被别的事物看到。
+
+3. 可重复读(repeatable read)
+
+一个事务执行过程中看到的数据，总是和这个事务开启时看到的数据是一致的。在可重复读的隔离级别下，未提交的事务对其他事务也是不可见的。
+
+4. 串行化(serializable)
+
+数据的读和写都会加锁，读会加读锁，写会加写锁。当遇到读写锁冲突时，后访问的事务必须等前一个事务执行完成后，再继续执行。
 
 一般来说，隔离级别越低，系统开销越低，可支持的并发越高，但隔离性也越差。
 
