--- a/k8s学习笔记/k8s网络/基础网络知识体系构建.md
+++ b/k8s学习笔记/k8s网络/基础网络知识体系构建.md
@@ -1,34 +1,42 @@
-# k8s网络导读
+# 基础网络知识体系构建
 
-学习k8s网络相关的问题之前，我们先问自己一个问题，学习k8s网络我们要解决k8s哪些问题，我能想到的有：
-1. 容器和宿主的网络如何规划。
-1. 宿主机和宿主中的容器怎么相互访问。
-2. 宿主中的容器如何访问外网。
-3. 宿主机中的多个容器之间怎么相互访问。
-4. 不同宿主机之间的容器怎么相互访问。
+我们目的是为了学习k8s容器网络。
+
+在学习k8s容器网络之前，我们先问自己一个问题，k8s容器网络需要解决哪些问题，我能想到的有：
+1. 容器和宿主的子网如何规划。
+2. 宿主机和宿主中的容器怎么相互访问。
+3. 宿主中的容器如何访问外网。
+4. 宿主机中的多个容器之间怎么相互访问。
+5. 不同宿主机之间的容器怎么相互访问。
 
 这5个问题都建立在一个问题的基础上，那就是：“宿主机与宿主机之间是如何相互访问的”。
 
 要想搞清楚宿主机之间是如何访问的，需要的知识储备包括：
-1. 5层网络模型
-2. 数据在网络中的传递过程
-3. 相关术语的理解，包括以太网，子网，子网掩码，集线器，交换机，路由器，网关，路由表，防火墙
-4. 虚拟网络设备和物理网络设备
-5. 虚拟网络设备的理解，包括：tun/tap，veth，网桥。
-6. 网络协议包括：传输层协议(TCP/UDP)，网络层协议（IP），数据链路层协议(ARP)
+1. 5层网络模型。
+2. 数据在网络中的传递过程。
+3. 相关术语的理解，包括以太网，子网，子网掩码，MAC地址，IP地址。
+4. 常用物理网络设备和用途：集线器，交换机，路由器。
+5. 常用虚拟网络设备和用途包括：Tun/Tap，Veth，Bridge。
+6. 网络协议包括：传输层协议(TCP/UDP)，网络层协议（IP），数据链路层协议(ARP)。
 
 除了网络原理和专业术语的理解以外，我们还需要掌握网络相关的命令，包括：
-1. IP 相关命令
-2. route 路由表相关
-3. IPtables 防火墙相关
+1. ip相关命令
+2. route路由表相关
+3. iptables防火墙相关
 5. ping，telnet，tcpdump相关
 
-只有充分掌握了以上的内容，才能对k8s网络理解的更加透彻。
+为什么学习*k8s容器网络*需要这些知识储备呢，因为k8s容器网络都是基于以上技术构建，例如：
+1. k8s容器Brigde模式网络使用虚拟Brigde和Veth。
+2. K8s容器跨主机网络的Host_Gw模式使用了虚拟网卡和路由表。
+3. k8s容器跨主机网络的UDP模式使用了虚拟网卡和Tun/Tap。
+4. k8s的Service实现使用了iptables的网络转发功能。
 
+所以，如果想要充分了解k8s容器网络，必须掌握以上基础知识。
+
+我们深入浅出，先从最基础的知识开始，相信看完这个系列后，对K8s一无所知的人也能理解k8s的网络实现原理。
 
 ## 五层网络模型
-
-网络七层协议图：
+网络模型七层，分别是：
 ```
    +----------------------------------------------------+
    |                      应用层                         |
@@ -47,7 +55,7 @@
    +----------------------------------------------------+
 ```
 
-为了便于理解，我们只需要关注5层模型：
+在互联网的实际应用中，我们只需要关注5层模型，分别是：
 
 1. 应用层：应用层是网络七层协议图的顶层，它提供了应用程序与网络之间的接口。应用层协议包括HTTP、FTP、SMTP等，用于实现不同的应用场景。
 2. 传输层：传输层提供了可靠的端到端传输服务。它将数据从会话层接收后进行分段和重组，并提供错误检测和恢复功能。常用的传输层协议包括TCP和UDP。
@@ -55,15 +63,25 @@
 4. 数据链路层：数据链路层负责数据的帧封装和错误检测。它将数据从网络层接收后进行帧封装，并提供错误检测和纠正功能。常用的数据链路层协议包括以太网和WiFi。
 5. 物理层：物理层负责数据的物理传输。它将数据从数据链路层接收后进行数字转模拟转换，然后将其传输到物理介质上。常用的物理层协议包括电缆和光纤。
 
+这个模型的意义在于：
+
+1. 分层设计：五层网络模型采用分层设计，使得每一层的功能清晰明确，便于网络的设计、维护和升级。
+2. 协议规范：每一层都有自己的协议规范，使得不同厂商的网络设备可以相互协作。比如，在物理层，网络设备需要遵循物理层协议规范，如电气特性、传输介质等。
+3. 通信可靠性：五层网络模型通过采用多层协议，可以在网络传输过程中提高数据传输的可靠性，使得数据传输更加稳定和安全。
+4. 功能独立性：每一层的功能是相对独立的，可以灵活地进行替换和升级，而不会影响到其他层次的功能和协议。
+
+发送网络数据时，数据的流向是：应用层->传输层->网络层->数据链路层->物理层。
+接受网络数据时，数据的流向正好相反，分别是：物理层->数据链路层->网络层->传输层->应用层。
 
 ## 物理层
 
-我们从最底层开始学习，便于了解网络传输的本质。
+我们先回答一个问题：“两台电脑如何传输数据”。
 
-我们先回答一个问题：“两台电脑如何相互访问”。
-答案很简单，把电脑连起来，可以用光缆、电缆、双绞线、无线电波等方式。
+这个问题的完整答案很复杂，但是最基本的要求是要把两台电脑连起来，可以用光缆、电缆、双绞线、无线电波等方式。
 
 在光缆中，传输的数据可以转化成电信号0/1，传输的速度约等于光速。
+
+物理层就是主要负责将比特流转换成物理信号并传输到通信媒介上，以便将数据从一个设备传输到另一个设备。
 
 ## 数据链路层
 
@@ -73,17 +91,23 @@
 
 如果HostD有一个唯一标识，我们通过这个唯一标识就可以找到hostD了。
 
-hostD的唯一标识就是主机的网卡的MAC地址。
+hostD的唯一标识就是插在hostD上网卡的MAC地址。
 
-也就是说，hostA知道了hostD的MAC地址就可以向hostD发生消息。
+也就是说，hostA知道了hostD的MAC地址就可以向hostD发送消息。
 
-### MAC地址
+### 网卡MAC地址
 
-host主机上都有一个网卡，连接到互联网，用于接受网络数据，网卡的地址，也就是数据包的发送地址和接收地址，就是所谓的MAC地址。
+主机上必须有一张网卡，才能连接到互联网。
+
+网卡用于接受网络数据，网卡的地址，也就是数据包的发送地址和接收地址，就是所谓的MAC地址。
+
+网卡通常具有一个或多个物理接口，用于连接网络电缆或天线。物理接口可以使用不同的连接器类型，例如RJ45插头（用于有线连接）或天线接头（用于无线连接）。
 
 每块网卡出厂的时候，都有一个全世界独一无二的MAC地址，长度是48个二进制位，通常用12个十六进制数表示，例如 00:1A:4D:5C:38:AB。
 
-hostA要找到hostD，只需要知道hostD的MAC地址即可。
+除了传输数据外，网卡还可以执行其他任务，例如在传输数据之前对数据进行加密和解密、计算校验和等，一些高级网卡还具有硬件协议栈，用于加速网络协议的处理，从而提高网络性能。
+
+hostA要找到hostD，只需要知道hostD网卡的MAC地址即可。
 
 我们先假设hostA已经知道了hostD的MAC地址，那怎么把数据发生给hostD呢？
 
@@ -93,11 +117,15 @@ hostA要找到hostD，只需要知道hostD的MAC地址即可。
 
 我们先假设hostA和hostD在同一个子网中，那hostA会在子网内发送一个ARP广播。
 
-所有子网内的主机都会收到这个广播，收到之后会查看hostA发送的目标MAC地址是否和自己的MAC地址相同，如果相同就接受数据，如果不同，就丢弃数据。
+子网内的所有主机都会收到这个广播，收到之后会查看hostA发送的目标MAC地址是否和自己的MAC地址相同，如果相同就处理数据，如果不同，就丢弃数据。
 
-这就是hostA把数据传输给hostD的原理。
+hostA拿到了hostD的MAC地址之后，使用以太网协议，把要传输的数据进行编码，然后再次在子网内广播。
 
-那现在有个问题，hostA向hostD发生数据的协议是什么？
+子网内的所有主机也会收到这个广播，使用以太网协议解码接受到的数据，比对MAC地址，如果发现和自己的MAC相同，就处理数据，否则直接丢弃。
+
+这样hostD就接收到了hostA的数据。
+
+那现在有个问题，hostA向hostD发生数据的以太网协议是什么？
 
 ### 以太网协议
 我们清楚了两台主机之间如何传输数据，数据的传输协议如下：
@@ -110,22 +138,20 @@ hostA要找到hostD，只需要知道hostD的MAC地址即可。
 | 数据（Data） | 46~1500字节 | 实际传输的数据，长度在46~1500字节之间。 |
 | 帧尾（FCS） | 4字节（32位） | 用于数据完整性的校验和。 |
 
-
 其中，每个字段的含义如下：
-帧头：用于同步传输速率和提供帧开始的标识。
-目标地址：指示数据包的接收者的MAC地址。
-源地址：指示数据包的发送者的MAC地址。
-类型：指示数据包中实际数据的类型。
-数据：实际传输的数据，长度在46~1500字节之间。
-帧尾：用于数据完整性的校验和。
+1. 帧头：用于同步传输速率和提供帧开始的标识。
+2. 目标地址：指示数据包的接收者的MAC地址。
+3. 源地址：指示数据包的发送者的MAC地址。
+4. 类型：指示数据包中实际数据的类型。
+5. 数据：实际传输的数据，长度在46~1500字节之间。
+6. 帧尾：用于数据完整性的校验和。
 
-从协议中我们也能看出，必须知道目标地址的MAC消息后才能发送。
-
+需要只要发送ARP广播的数据也是通过以太网协议编码，此时目标地址默认是ff：ff：ff：ff：ff：ff。
 
 ### 集线器
 
 想象一下，这样一个问题，如果hostA，hostB，hostC需要相互通信，那么就需要用光缆相互联系在一起，如图：
-
+```
 ┌────────────────┐
 │     hostA      ├────────────────────────┐
 └───▲────┬──▲────┘                        │
@@ -137,12 +163,14 @@ hostA要找到hostD，只需要知道hostD的MAC地址即可。
 ┌───┴────▼──▼──────┐                     │
 │    hostB         ├─────────────────────┘
 └──────────────────┘
+```
 
-如果子网里面有100机器呢，每一台都需要和另外99台连在一起，需要的网线都没钱买了。
+如果子网里面有100机器呢，每一台都需要和另外99台连在一起，买网线的钱都是一大笔开支。
 
 为了解决这个问题，人类发明了集线器，集线器是个物理设备，用网线和主机相连。
 
 线器有多个端口，每个端口都可以连接到一台主机，这样就避免了主机之间相关互联，一个子网的所有主机都可以连接到集线器上，如图：
+```
 
   +-----------+       +------------+
   |   hostA   |       |    hostB   |
@@ -164,10 +192,12 @@ hostA要找到hostD，只需要知道hostD的MAC地址即可。
 |   hostC    |       |    hostD   |
 +------------+       +------------+
 
+```
 
 集线器Hub连接hostA，hostB，hostC，hostD。
 
 当hostA通过ARP协议询问hostD的MAC地址时，他会把请求转发给集线器，集线器接受到信号后，它仅仅是无脑将电信号转发到所有接口（广播），不做任何处理，这样集线器连接的所有host都能接受到信号。
+
 目标hostD收到信息后，通过对比自己MAC地址和请求的MAC地址，如果相同则处理请求，如果不是则丢弃。
 
 
@@ -201,12 +231,11 @@ hostA要找到hostD，只需要知道hostD的MAC地址即可。
 
 真实世界中，网络运营商他们各自有自己的网络，大型公司也会构建自己的网络，这些子网络一起构建了整个互联网。
 
-现在的问题是：如何判断两个host主机在属于同一个子网，别急，继续往下看。
+现在的问题是：如何判断两个host主机在属于同一个子网。
 
 ### 网络地址和子网掩码
 
-我们知道主机网卡有MAC地址，但是MAC是在网卡出厂后就固定了，不利于网络重新划分，于是我们重新给每个网卡一个32位编号，例如：
-1000000101010000000000000000001。
+我们知道主机网卡有MAC地址，但是MAC是在网卡出厂后就固定了，不利于网络重新划分，于是我们重新给每个网卡一个32位编号，例如：1000000101010000000000000000001。
 
 你觉得有些不清晰，于是把它分成四个部分，中间用点相连，11000000.10101000.00000000.00000001，你还觉得不清晰，于是把它转换成10进制：192.168.0.1。
 
@@ -228,7 +257,7 @@ IP地址和子网掩码的按位AND运算可以得到网络ID。
 
 这样我们就理解了子网和子网掩码的概念。
 
-务必建立这样的概念：同一个子网中，任何一台主机发送ARP报文，子网内的所有主机都会接受到数据，最后会通过发送方请求的目标IP地址和自己的IP地址比对，如果相同才处理该报文，否则会丢失。
+务必建立这样的概念：*同一个子网中，任何一台主机发送ARP报文，子网内的所有主机都会接受到数据，最后会通过发送方请求的目标IP地址和自己的IP地址比对，如果相同才处理该报文，否则会丢失*。
 
 ### ARP协议
 
@@ -250,40 +279,49 @@ ARP协议提供了一种将IP地址解析为物理地址的机制，*注意，AR
 | 192.168.0.3    | 01:23:45:67:89:ef | eth0       | 2023-03-29   |
 
 
-当一个主机需要向目标主机发送数据时，它首先会在自己的ARP缓存中查找目标主机的IP地址是否已经被解析为对应的物理地址。如果存在，那么该主机可以直接发送数据。
+当一个主机需要向目标主机发送数据时，它首先会在自己的ARP缓存中查找目标主机的IP地址是否已经被解析为对应的物理地址。
+如果存在，那么该主机可以直接发送数据，如果不存在，则需要进行ARP请求。
+ARP请求是广播的，所有在同一子网中的主机都会收到该请求。当目标主机收到ARP请求时，会将自己的物理地址返回给发送ARP请求的主机。
 
-如果不存在，则需要进行ARP请求。ARP请求是广播的，所有在同一子网中的主机都会收到该请求。当目标主机收到ARP请求时，会将自己的物理地址返回给发送ARP请求的主机。发送ARP请求的主机会将得到的物理地址存储在自己的ARP缓存中，以便下次快速访问。
-
+送ARP请求的主机会将得到的物理地址存储在自己的ARP缓存中，以便下次快速访问。
 
 ### 交换机
 
-试想一下，在子网中，集线器每次都将信号广播给所有的主机，而只有一个主机会应答，其他的报文都是浪费网络带宽，怎么优化呢？
+试想一下，在子网中，集线器每次都将信号广播给所有的主机，而只有一个主机会应答，造成了大量的网络带宽浪费，怎么优化呢？
 
-如果hostA知道了hostB的MAC地址，那只需要数据投递给HostB就可以了，不需要广播，如何实现呢？
+如果hostA知道了hostB的MAC地址，那只需要数据投递给HostB，不需要广播，但如何实现呢？
 
-这就是发明交换机需要解决的问题。
+这就是人类发明交换机需要解决的问题。
 
 交换机是一个物理设备，他提供了很多接口，主机可以通过光缆连接到交换机上，连接在交换机上的主机构成了一个子网，如图所示：
 ```
 
-          +-----------+
-          |  Switch   |
-          +-----------+
-             |     |     |
-       Port 1| Port 2| Port 3
-             |     |     |
-       +-----+     +-----+
-       |                  |
-  +----+----+         +----+----+
-  |  Host 1 |         |  Host 2 |
-  +---------+         +---------+
+   +-------------+          +---------------+
+   | Host1       |          | Host2         |
+   +-------+-----+          +----+----------+
+           |                     |
+           |                     |
+           |                     |
+           |                     |
+         +-v---------+-----+-----v----+
+         | Port1     |     | Port2    |
+         +-----------+     +----------+
+         |          Switch            |
+         +-----------+     +----------+
+         | Port2     |     | Port4    |
+         +-+---------+-----+-----^----+
+           ^                     |
+           |                     |
++----------+-----+        +------+---------+
+| Host3          |        |  Host4         |
++----------------+        +----------------+
+
 ```
 
-交换机有三个端口（Port 1、Port 2，Port 3），其中Host1连接到Port1上，Host2连接在Port2上。
+交换机有端口Port 1、Port 2，Port 3，Port4，分别连接了host1，host2，host3，host4。
 
-此时如果Host1把需要和Host2通信，过程是这样：
-
-1. Host1 通过判断目标主机Host2的ip，直到host2和自己在同一个网段。
+Host1和Host2通信过程是这样：
+1. Host1 通过判断目标主机Host2的ip，发现host2和自己在同一个网段。
 2. Host1会直接把数据提交给Switch交换机。
 3. 交换机收到数据后，会查找MAC地址和端口的映射表，看看是否host2的MAC地址已经在表中，如果没有，则在子网内发送广播。
 4. host2收到广播后，会把MAC地址返回给Switch，Switch在返回给Host1，同时Switch会记录MAC地址和Port2的映射关系。
@@ -316,7 +354,7 @@ ARP协议提供了一种将IP地址解析为物理地址的机制，*注意，AR
 
 这样就实现了跨子网的的通信，如同所示：
 
-
+```
 +------------------+
 |  hostA           +------------------------+
 |eth0:192.168.1.1/24                        |
@@ -331,14 +369,14 @@ ARP协议提供了一种将IP地址解析为物理地址的机制，*注意，AR
 |eth0:192.168.1.2/24+----------------------+                   +-------------------+
 |                  |
 +------------------+
+```
 
-hostA和hostC的通信完成如下：
+hostA和hostC处于不同的子网，他们的的通信过程如下：
 
-
-1. hostA请求hostD，其ip是192.168.2.2，和hostA不是一个子网，此时hostA会查找路由表。
-2. hostA查找路由表之后，会使用默认网关转发本次请求，默认网关就是配置的路由器的ip：192.168.1.4。
+1. hostA请求hostD，发现hostD的ip是192.168.2.2，和hostA不是一个子网，此时hostA会查找路由表。
+2. hostA查找路由表之后，会使用默认网关转发本次请求，默认网关就是配置的网关Router的ip：192.168.1.4。
 3. hostA发现默认网关的ip 192.168.1.4和自己是同一个子网，于是把请求转发给集线器Hub。
-4. Hub收到请求会，发送ARP报文询问Router的MAC地址，于是Router会把MAC返回，最终hostA得到了Route的MAC地址。
+4. Hub收到请求会广播发送ARP报文询问Router的MAC地址，于是Router会把MAC返回，最终hostA得到了Route的MAC地址。
 5. hostA得到了MAC地址后会把请求转发给Router。
 4. Retoure获取到hostA的报文后，发现请求的是192.128.2.1，他会对比路由表的网络段和目标IP地址的网络段，最终使用eth1接口发送数据。
 5. eth1配置的IP和目标IP是同一个子网，于是直接发起了ARP请求。
@@ -356,7 +394,7 @@ hostA和hostC的通信完成如下：
 
 什么是网关，怎么配置网关？
 
-网关是一个逻辑概念，拥有数据转发的功能都可以成为网关，在微服务中，我们会有各种各样的网关，只要是能转发数据的设备都可以叫做网关。
+网关是一个逻辑概念，拥有网络数据转发的功能都可以成为网关，在微服务中，我们会有各种各样的网关，只要是能转发数据的设备都可以叫做网关。
 
 路由器可以在不同的子网中转发数据，所以路由器也是一个网关。
 
@@ -369,7 +407,7 @@ hostA和hostC的通信完成如下：
 6. 在“常规”选项卡上，选择“使用下面的默认网关地址”并输入默认网关地址。
 7. 点击“确定”以保存更改。
 
-默认网关就是配置路由器的IP地址，注意路由器有多个接口，每个接口都有自己的IP，也就是说路由器有多个IP，主机需要配置和自己是同一网段的IP。
+默认网关就是*配置的路由器的IP地址，注意路由器有多个接口，每个接口都有自己的IP，也就是说路由器有多个IP，主机需要配置和自己是同一网段的路由器IP*。
 
 ### 路由表
 
@@ -383,25 +421,21 @@ hostA和hostC的通信完成如下：
 | 192.168.1.0 | 255.255.255.0 |192.168.1.1 | eth0 |
 | 192.168.2.0 | 255.255.255.0 |192.168.2.1 | eth1 |
 
-目标网络：就是需要转发的网络，也就是目标子网。
-子网掩码：用于计算目标子网。
-网关：就是路由器
-接口：就是把数据发出去的设备，通常就是指网卡，
+1. 目标网络：就是需要转发的网络，也就是目标子网。
+2. 子网掩码：用于计算目标子网。
+3. 网关：就是路由器
+4. 接口：就是把数据发出去的设备，通常就是指网卡，
 
 第一行0.0.0.0表示默认路由，因为它的目标网络和子网掩码都为0.0.0.0，表示所有的IP地址，也就是说当找不到目标网络时，它将所有的流量路由到192.168.1.1默认路由器上。
 
 第二个条目描述了192.168.1.0/24子网，数据包将被转发到192.168.1.1网关上。
 第二个条目描述了192.168.2.0/24子网，数据包将被转发到192.168.2.1网关上。
 
-路由表就相当于一份地图，畅想一下，我们是不是可以通过修改路由表，实现动态的对数据进行转发？
-
-答案是可以，我们会通过创建虚拟网卡和添加路由规则，实现了网络转发，k8s就是利用了相关技术。
+路由表就相当于一份地图，畅想一下，我们是不是可以通过修改路由表，实现动态的对数据进行转发。
 
 ### IP网络协议
 
-现在我们搞清楚了跨网的数据传递，是时候了解一下ip报文的协议。2
-
-IP数据报是IP协议传输的数据单元，其格式如下：
+现在我们搞清楚了跨网的数据传递，是时候了解一下ip报文的协议。IP数据报是IP协议传输的数据单元，其格式如下：
 
 | 字段 | 长度 | 描述 |
 | --- | --- | --- |
@@ -423,13 +457,36 @@ IP数据报是IP协议传输的数据单元，其格式如下：
 
 由此可以看出，在不同的网络段传递数据时，需要配置源IP地址和目标IP地址。
 
+
+### 网卡配置
+
+到目前为止，我们理解了网卡，网卡的MAC地址，IP，还有一个问题我们没有解决，那就是网卡如何配置IP地址？
+
+网卡可以绑定IP地址，网卡绑定IP地址可以动态绑定也可以静态绑定。
+
+动态绑定IP地址是指在网络中动态地为计算机分配IP地址，而不是手动为每台计算机分配固定的IP地址。
+
+动态绑定IP地址的原理是基于DHCP协议（Dynamic Host Configuration Protocol），该协议是一个客户端/服务器协议，用于自动分配IP地址、子网掩码、网关和DNS等网络配置信息。
+
+1. 客户端计算机在启动时向网络中的DHCP服务器发送广播请求，以请求网络配置信息。
+2. DHCP服务器接收到客户端的广播请求后，向客户端提供IP地址、子网掩码、网关、DNS服务器和其他相关的网络配置信息。
+3. 客户端接收到DHCP服务器提供的网络配置信息后，将这些信息应用到其网络接口上，以使其能够与网络中的其他计算机进行通信。
+4. DHCP服务器将客户端的网络配置信息保存在其数据库中，以便在客户端的租期到期时自动为其分配新的IP地址。
+
+DNS (Domain Name System) 服务器是一种网络服务，用于将域名转换为 IP 地址。当您在浏览器中输入网址时，浏览器需要将该网址转换为相应的 IP 地址，以便能够与目标服务器进行通信。
+DNS 服务器可以被分为多层次的，全球性的系统，其中根 DNS 服务器是最顶层的服务器，它们包含所有顶级域名，例如.com、.org和.net等。
+
+较低级别的 DNS 服务器包含更具体的域名信息，例如很多公司都有自己的DNS服务器，顺便提一句，K8s也有专门的DNS服务器。
+
 ## 传输层
 
 在数据链路层和网络层，我们已经搞清楚数据的传递过程，有一些问题没有解决：
 1. 数据传输的可靠性保证，比如丢包，乱序等。
 2. 数据的传输效率保证。
 
-这些事情就是传输层需要解决的问题。我们来想这样一个问题，一台电脑可以同时看网页，看电影，连接到的是不同的主机，电脑是如何区别不同主机发过来的数据。
+这些事情就是传输层需要解决的问题。
+
+我们来想这样一个问题，一台电脑可以同时看网页，看电影，连接到的是不同的主机，电脑是如何区别不同主机发过来的数据。
 
 答案是传输层的端口，端口并不是网卡上有个物理接口叫做端口，端口只是一个虚拟概念。
 
@@ -450,29 +507,18 @@ Unix系统就把主机+端口，叫做套接字（socket）。网络编程主要
 
 ## 网络数据发送过程
 ```
-+----------------+          +----------------+          +----------------+
-|   应用层数据    |           |   传输层数据   |           |    IP数据报     |
-+----------------+          +----------------+          +----------------+
-          |                         |                          |
-+----------------+          +----------------+          +----------------+
-|    数据段 1     |     -->   |  TCP头部+DATA  |      --> |   IP头部+DATA  |
-+----------------+          +----------------+          +----------------+
-|    数据段 2     |     -->   |  TCP头部+DATA  |      --> |   IP头部+DATA  |
-+----------------+          +----------------+          +----------------+
-         .                    .                           .
-         .                    .                           .
-         .                    .                           .
-+----------------+          +----------------+          +----------------+
-|    数据段 n    |     -->     |   TCP头部    |      -->  |   IP头部       |
-+----------------+          +----------------+          +----------------+
-      |                             |                          |
-+-------------------------------------------------------------------------+
-|                                 数据链路层                                |
-+-------------------------------------------------------------------------+
-               |                                    |
-        +----------------+                  +----------------+
-        |    以太网帧     |                   |    以太网帧      |
-        +----------------+                  +----------------+
+
++-------------+        +----------------+      +-----------------+    +---------------+      +---------+
+| 应用层       +--------> 传输层          +------> 网络层           +----> 数据链路层      +------>物理层    |
+|             |        |                |      |                 |    |               |      |         |
++-------------+        +----------------+      +-----------------+    +---------------+      +---------+
+
+
++-------------+        +----------------+      +-----------------+   +-----------------+     +----------+
+| 数据段       |        | TCP头+数据      |      | IP头+数据        |   | 帧头+数据        |     | 电信号    |
+|              -------->                +------>                 +--->                 +----->          |
++-------------+        +----------------+      +-----------------+   +-----------------+     +----------+
+
 ```
 
 1. 应用程序通过socket套接字发起三次握手后，创建连接。
@@ -487,32 +533,13 @@ Unix系统就把主机+端口，叫做套接字（socket）。网络编程主要
 3. 拿到IP网络层的数据之后通过TCP协议获取端口信息
 4. 获取到端口信息后，投递到对应的端口队列
 
-## 物理网络设备和虚拟网络设备
+## 虚拟网络设备
 
-常见的物理网络设备包括主机，路由器，交换机，集线器。再次强调一下，所有的网络设备都有IP，子网掩码，MAC地址，ARP缓冲，路由表。
+常见的物理网络设备包括主机，路由器，交换机，集线器。
+
+再次强调一下，所有的网络设备都有IP，子网掩码，MAC地址，ARP缓存，路由表。
 
 此次之外，还有虚拟网络设备，虚拟网络设备通常是操作系统模拟出来的网络设备，和物理网络设备一样，也有IP，子网掩码，MAC地址，ARP缓冲，路由表。
-
-### 网卡
-
-网卡（Network Interface Card）是一种计算机硬件设备，用于将计算机连接到计算机网络中，以实现网络通信。它通常被安装在计算机的扩展插槽上，或者集成在主板上。网卡可以通过有线或无线方式与网络连接，其主要功能是将数据从计算机发送到网络中，或者将数据从网络中接收到计算机上。
-
-网卡通常具有一个或多个物理接口，用于连接网络电缆或天线。物理接口可以使用不同的连接器类型，例如RJ45插头（用于有线连接）或天线接头（用于无线连接）。网卡还具有一个唯一的硬件地址，称为MAC地址，用于在网络中标识该网卡。
-
-除了传输数据外，网卡还可以执行其他任务，例如在传输数据之前对数据进行加密和解密、计算校验和等。一些高级网卡还具有硬件协议栈，用于加速网络协议的处理，从而提高网络性能。
-
-网卡可以绑定IP地址，网卡绑定IP地址可以动态绑定也可以静态绑定。
-
-动态绑定IP地址是指在网络中动态地为计算机分配IP地址，而不是手动为每台计算机分配固定的IP地址。动态绑定IP地址的原理是基于DHCP协议（Dynamic Host Configuration Protocol），该协议是一个客户端/服务器协议，用于自动分配IP地址、子网掩码、网关和DNS等网络配置信息。
-
-1. 客户端计算机在启动时向网络中的DHCP服务器发送广播请求，以请求网络配置信息。
-2. DHCP服务器接收到客户端的广播请求后，向客户端提供IP地址、子网掩码、网关、DNS服务器和其他相关的网络配置信息。
-3. 客户端接收到DHCP服务器提供的网络配置信息后，将这些信息应用到其网络接口上，以使其能够与网络中的其他计算机进行通信。
-4. DHCP服务器将客户端的网络配置信息保存在其数据库中，以便在客户端的租期到期时自动为其分配新的IP地址。
-
-
-### 虚拟网络设备
-虚拟网络设备是一种虚拟化技术，用于在计算机上创建虚拟的网络接口和设备。
 
 虚拟网络设备是一种虚拟化技术，用于在计算机上创建虚拟的网络接口和设备。它可以将一台计算机虚拟为多个独立的计算机，并提供多个虚拟网络接口和设备，从而使计算机能够同时连接到多个网络或实现网络功能的分离和隔离。
 
@@ -592,7 +619,6 @@ Veth有两个重要的特性：
 
 我们先忽略网络namespace的概念，总之只要知道Veth创建的一对虚拟网络接口可以相互通信。
 
-
 #### veth的相关操作
 ```
 1. 创建一对veth接口的示例命令：
@@ -616,48 +642,39 @@ veth1 MAC地址： 02:91:6a:bf:8c:70
 ```
 
 vth0和vth1的连接关系如图：
+```
 
          +------------------------+
-         |                        |
-         |                        |
          |        其他网络设备      |
-         |                        |
          +------------------------+
                     ↑
-                    |
                     ↓
          +------------------------+
-         |                        |
-         |        veth1           |
-         |                        |
+         |        Eth1            |
          +------------------------+
                     ↑
-                    |
                     ↓
          +------------------------+
-         |                        |
-         |        veth0           |
-         |                        |
+         |        Eth0            |
          +------------------------+
                     ↑
-                    |
                     ↓
          +------------------------+
-         |                        |
          |       其他网络设备       |
          |        Namespace       |
-         |                        |
          +------------------------+
+```
+假设主机上创建一个Veth设备，一对虚拟设备分别是：Eth0(192.168.1.1)，Eth1（192.168.1.2）
 
-在主机上指定eth0网卡，ping -I veth0  192.168.1.2 （eth1的目标地址）过程是：
-1. 主机先需要得到eth0的MAC地址。
-2. 主机发现eth0是同一个网段，由于指定了eth0接口就不需要广播了，直接对eth0发起ARP请求。
-3. eth0收到ARP请求后，判断目标IP和自己的IP不一致，于是数据转发给eth1
-4. eth1收到信息后，判断目标IP和自己的一致，则把MAC转发给eth0
-5. 主机接受到eth1的MAC地址后，由于指定了eth0, 还是会把数据转发给eth0
-6. eth0判断判断目标IP和自己的一致，于是把数据转发给eth1.
-7. eth1收到信息后，判断目标IP和自己的一致，则把IP转发给eth0
-8. eth0在转发给主机
+主机指定从Eth0访问Eth1，例如ping -I Eth0  192.168.1.2（Eth1的ip) 过程如下：
+
+1. 主机先需要得到Eth1的MAC地址。
+2. 主机发现192.168.1.2和自己同一个网段，由于指定了Eth0接口就不需要广播了。
+3. Eth0收到ARP请求后，判断目标IP和自己的IP不一致，于是数据转发给Eth1。
+4. Eth1收到信息后，判断目标IP和自己的一致，则把MAC转发给Eth0，在回传给主机。
+5. 主机接受到Eth1的MAC地址后，开始发数据，由于指定了Eth0, 还是会把数据转发给Eth0。
+6. Eth0判断判断目标IP和自己的不一致，于是把数据转发给Eth1。
+7. Eth1收到信息后，判断目标IP和自己的一致，于是处理数据。
 
 这个过程，如何缓存了ARP MAC地址，则可以省略ARP协议部分的请求过程。
 
@@ -671,7 +688,7 @@ vth0和vth1的连接关系如图：
 
 
 ## 小结
-1. 我们学习了5层网络模型，也理解了每层模型负责的任务。
+1. 我们学习了5层网络模型，也理解了每层模型的功能。
 2. 主机之间基于MAC地址传输数据，传输数据之前，需要通过ARP协议把IP地址转化为MAC地址，ARP协议只能在子网内广播，同时网络设备都具备缓存ARP结果的能力，包括网卡，交换机，路由器，虚拟网络设备等。
 3. 每个网络设备都有MAC地址，IP，子网掩码，ARP缓冲，路由表等，MAC地址和IP的关系类似于手机和电话号码。
 4. 我们学习网络段号，子网掩码，如何判断两个IP是否属于同一网段，在同一网段内直接广播发送，如果是交换机的话无需广播，直接投递指定接口。
