--- a/k8s学习笔记/k8s网络/网络操作和异常排查.md
+++ b/k8s学习笔记/k8s网络/网络操作和异常排查.md
@@ -449,7 +449,7 @@ kubectl logs <pod-name> -c <container-name>
 6. 使用网络诊断工具：如果以上步骤都无法确定问题所在，可以使用网络诊断工具，如 ping、traceroute 等，来诊断容器网络的问题。这些工具可以帮助确定容器是否可以相互通信，以及网络延迟和丢包等情况。
 
 
-## tcpdump抓包工具
+## Tcpdump抓包工具
 
 Tcpdump 是一种非常强大的网络抓包工具，可以用来捕获和分析网络数据包。
 
