--- a/k8s学习笔记/k8s网络/虚拟网桥和容器网络实现原理.md
+++ b/k8s学习笔记/k8s网络/虚拟网桥和容器网络实现原理.md
@@ -6,8 +6,7 @@
 
 网络命名空间（network namespace）是Linux内核提供的一种网络虚拟化技术，可以将一组网络接口设备和路由表封装在一个独立的命名空间中，从而使得不同的网络栈可以独立运行，互不干扰。
 
-
-使用网络命名空间可以在同一物理主机上创建多个虚拟的子网，看过[网络知识体系构建](https://github.com/sunnyingit/notebook/blob/master/k8s%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/k8s%E7%BD%91%E7%BB%9C/%E7%BD%91%E7%BB%9C%E4%BD%93%E7%B3%BB%E6%9E%84%E5%BB%BA%E5%AF%BC%E8%AF%BB.md)的文章，我们就会明白不同子网之间是无法直接相互访问的。
+使用网络命名空间可以在同一物理主机上创建多个虚拟的子网，看过[网络知识体系构建](https://github.com/sunnyingit/notebook/blob/master/k8s%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/k8s%E7%BD%91%E7%BB%9C/%E5%9F%BA%E7%A1%80%E7%BD%91%E7%BB%9C%E7%9F%A5%E8%AF%86%E4%BD%93%E7%B3%BB%E6%9E%84%E5%BB%BA.md)的文章，我们就会明白不同子网之间是无法直接相互访问的。
 
 在创建容器时，我们可以给容器设置和主机不同的的Network Namespace，这样容器和宿主机之间达到了网络隔离的目标。
 
@@ -47,29 +46,32 @@ docker run –d –net=host --name nginx-host nginx
 
 ## Bridge模式
 
-先回顾一下，我们在[网络知识体系构建](https://github.com/sunnyingit/notebook/blob/master/k8s%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/k8s%E7%BD%91%E7%BB%9C/%E7%BD%91%E7%BB%9C%E4%BD%93%E7%B3%BB%E6%9E%84%E5%BB%BA%E5%AF%BC%E8%AF%BB.md）提到过网桥。
+先回顾一下，我们在[网络知识体系构建](https://github.com/sunnyingit/notebook/blob/master/k8s%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/k8s%E7%BD%91%E7%BB%9C/%E5%9F%BA%E7%A1%80%E7%BD%91%E7%BB%9C%E7%9F%A5%E8%AF%86%E4%BD%93%E7%B3%BB%E6%9E%84%E5%BB%BA.md)提到过网桥，不熟悉的同学可以复习一下。
 
-简单回顾一下，理解网桥，我们先理解桥：桥是连接河的两岸，相对的，网桥就是连接两个网络设备，虚拟网桥就是连接两个虚拟网络设备。
+简单回顾一下，理解网桥，我们先理解桥：桥是连接河的两岸，相对的，网桥就是连接两个网络设备。
 
-可以把网桥看做虚拟交换机，在子网内连接两个不同的网络设备。
+可以把网桥看做虚拟交换机，在*子网内连接两个不同的网络设备*。
 
 网桥有自己的MAC地址，IP，子网掩码，可以给网桥添加多个端口，添加语法可以参考[网络操作和异常排查](https://github.com/sunnyingit/notebook/blob/master/k8s%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/k8s%E7%BD%91%E7%BB%9C/%E7%BD%91%E7%BB%9C%E6%93%8D%E4%BD%9C%E5%92%8C%E5%BC%82%E5%B8%B8%E6%8E%92%E6%9F%A5.md)。
 
 每个端口可以连接一个网络设备，连接到网桥上的网络设备发送数据时，如果目标网络设备的IP在子网内，则会直接投递给网桥，网桥通过MAC和端口的映射关系表，投递给对应的端口，避免广播带来的性能损失。
 
-同时，我们在[网络知识体系构建](https://github.com/sunnyingit/notebook/blob/master/k8s%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/k8s%E7%BD%91%E7%BB%9C/%E7%BD%91%E7%BB%9C%E4%BD%93%E7%B3%BB%E6%9E%84%E5%BB%BA%E5%AF%BC%E8%AF%BB.md）提到过Veth虚拟网络设备。
+同时，我们在[网络知识体系构建](https://github.com/sunnyingit/notebook/blob/master/k8s%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/k8s%E7%BD%91%E7%BB%9C/%E5%9F%BA%E7%A1%80%E7%BD%91%E7%BB%9C%E7%9F%A5%E8%AF%86%E4%BD%93%E7%B3%BB%E6%9E%84%E5%BB%BA.md)提到过Veth虚拟网络设备。
 
-简单回顾一下，Veth是一种Linux虚拟网络接口，它是成对出现的虚拟网络设备。假设通过Veth技术创建一对虚拟网络设备，Eth0和Eth1,那他们有如下特性：*Eth0和Eth1可以相互通信，不受Network Namespace的限制。*
+简单回顾一下，Veth是一种Linux虚拟网络接口，它是成对出现的虚拟网络设备。
+
+假设通过Veth技术创建一对虚拟网络设备，Eth0和Eth1,那他们有如下特性：*Eth0和Eth1可以相互通信，不受Network Namespace的限制。*
 
 Veth的相关操作命令可以回顾[网络操作和异常排查](https://github.com/sunnyingit/notebook/blob/master/k8s%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/k8s%E7%BD%91%E7%BB%9C/%E7%BD%91%E7%BB%9C%E6%93%8D%E4%BD%9C%E5%92%8C%E5%BC%82%E5%B8%B8%E6%8E%92%E6%9F%A5.md)。
 
 
 Docker Bridege模式就是虚拟网桥技术和Veth技术实现：
-1. 在宿主中创建一个虚拟网桥docker0
+1. 在宿主中创建一个虚拟网桥Docker0。
 2. 使用Veth创建一对虚拟网络设备Eth0和Eth1。
-3. Eth0作为容器的虚拟网卡，Eth1和虚拟交换机docker0相连
+3. Eth0作为容器的虚拟网卡，Eth1和虚拟交换机docker0相连。
 
 如图所示：
+```
 
 +-------------------------------------------------------------+
 |                 +----------------------+                    |
@@ -95,40 +97,63 @@ Docker Bridege模式就是虚拟网桥技术和Veth技术实现：
 |        ip:192.168.1.1/24           ip:192.168.1.2/24        |
 |                                                             |
 +-------------------------------------------------------------+
+```
+解释一下：
 
 1. 宿主机的物理网卡配置了10.168.1.3/24 网段
-2. 宿主机创建了Docker0虚拟交换机
-3. 创建了两个容器Container1，Container2，并且各自为他们创建了Veth设备，一端在容器，一端在宿主的Docker0上。
+2. 宿主机创建了Docker0虚拟交换机。
+3. 宿主机创建了两个容器Container1，Container2，并且各自为他们创建了Veth设备，一端在容器，一端在宿主的Docker0上。
 
-创建步骤如下：
-1. 首先，在宿主机上创建一个虚拟Veth设备：
+在宿主机上创建步骤如下：
+1. 创建Docker0虚拟网桥：
 ```
-sudo ip link add <interface_name> type veth peer name <peer_name>
-```
-其中，<interface_name> 是要为容器创建的虚拟网卡的名称，<peer_name> 是宿主机上与之关联的另一个虚拟网卡的名称。
-
-2. 将一个虚拟网卡附加到容器上，例如使用 Docker 命令：
-```
-docker network connect <network_name> <container_name> --interface <interface_name>
-```
-其中，<network_name> 是容器所连接的网络的名称，<container_name> 是容器的名称或 ID，<interface_name> 是步骤 1 中创建的虚拟网卡的名称。
-
-3. 创建创建虚拟网桥：
-```
-sudo apt-get install bridge-utils
-sudo brctl addbr Docker0
+sudo ip link add name docker0 type bridge
 ```
 
-4. 将虚拟网卡添加到虚拟网桥中并启动：
+2. 设置Docker0网桥的IP地址：
 ```
-sudo brctl addif Docker0 Eth1
-sudo ifconfig Docker0 192.168.1.100 netmask 255.255.255.0
-sudo ifconfig Docker0 up
+sudo ip addr add 172.17.0.1/16 dev docker0
 ```
 
-5. 最后配置所有虚拟网络设备IP信息。
+3. 启动Docker0网桥：
+```
+sudo ip link set dev docker0 up
+```
 
-当然，Docker创建容器时会自动执行以上步骤，这里我们只是需要了解docker创建的原理。
+4. 创建Veth设备对：
+```
+sudo ip link add veth0 type veth peer name veth1
+```
+
+5. 将veth0设备附加到Docker0网桥上：
+```
+sudo brctl addif docker0 veth0
+```
+
+6. 将veth1设备添加到容器的网络命名空间：
+```
+sudo ip link set veth1 netns <container-id>
+```
+
+在上述命令中，<container-id>应替换为您要将veth1设备添加到的容器的ID。
+
+7. 在容器内启动veth1设备：
+```
+sudo ip netns exec <container-id> ip link set dev veth1 up
+```
+
+8. 分配IP地址给容器内的veth1设备
+```
+sudo ip netns exec <container-id> ip addr add <IP-address>/<subnet-mask> dev veth1
+```
+
+9. 添加宿主的路由规则：
+例如要使宿主可以访问子网为192.168.1.0/24，则可以使用以下命令：
+```
+sudo ip route add 192.168.1.0/24 via <虚拟网桥的IP地址>
+```
+
+当然以上步骤Docker在创建容器时会帮我们自动处理完成，我们只需要了解一下原理。
 
 
 ### 容器和宿主机相互访问
@@ -161,12 +186,12 @@ sudo ifconfig Docker0 up
 +-------------------------------------------------------------+
 
 
-1. Container1会发现192.168.1.2和自己处于同一网段，于是直接把数据发给网卡Eth0
+1. Container1会发现192.168.1.2和自己处于同一网段，于是直接把数据发给网卡Eth0。
 2. Eth0是成对网络设备，所以Eth0发给了插在Docker0上Eth1。
 3. Eth1接收到数据后，会转发给Docker0，Docker0是宿主的虚拟网络设备，这样宿主就拿到了Container1请求的数据。
 4. 宿主一看目标IP是192.168.1.2，和自己并不是一个网络，于是查询路由表。
-5. 宿主一看路由表，发现192.168.1.2网段的数据都有Docker0转发，于是Docker0会发送一个ARP广播。
-6. “插”在Docker0上面所有的虚拟设备都收到了ARP请求，包括Eth1，Eth1转发给了Eth0
+5. 宿主一看路由表，发现192.168.1.2网段的数据都由Docker0转发，于是Docker0会发送一个ARP广播。
+6. “插”在Docker0上面所有的虚拟设备都收到了ARP请求，包括Eth1，Eth1转发给了Eth0。
 7. Container2的Eth0解包后，分析出目标IP地址和自己的一样，于是把MAC地址返回回去。
 8. 最终Container1就拿到了Container2的MAC地址，就可以完成通信了。
 
