--- a/k8s学习笔记/k8s网络/基础网络知识体系构建.md
+++ b/k8s学习笔记/k8s网络/基础网络知识体系构建.md
@@ -18,6 +18,7 @@
 4. 常用物理网络设备和用途：集线器，交换机，路由器。
 5. 常用虚拟网络设备和用途包括：Tun/Tap，Veth，Bridge。
 6. 网络协议包括：传输层协议(TCP/UDP)，网络层协议（IP），数据链路层协议(ARP)。
+7. NAT的技术理解，包括SNAT和DNAT技术
 
 除了网络原理和专业术语的理解以外，我们还需要掌握网络相关的命令，包括：
 1. ip相关命令
