--- a/k8s学习笔记/k8s网络/基础网络知识体系构建.md
+++ b/k8s学习笔记/k8s网络/基础网络知识体系构建.md
@@ -18,7 +18,7 @@
 4. 常用物理网络设备和用途：集线器，交换机，路由器。
 5. 常用虚拟网络设备和用途包括：Tun/Tap，Veth，Bridge。
 6. 网络协议包括：传输层协议(TCP/UDP)，网络层协议（IP），数据链路层协议(ARP)。
-7. NAT的技术理解，包括SNAT和DNAT技术
+7. NAT的技术理解，包括SNAT和DNAT技术。
 
 除了网络原理和专业术语的理解以外，我们还需要掌握网络相关的命令，包括：
 1. ip相关命令
@@ -433,6 +433,45 @@ hostA和hostC处于不同的子网，他们的的通信过程如下：
 第二个条目描述了192.168.2.0/24子网，数据包将被转发到192.168.2.1网关上。
 
 路由表就相当于一份地图，畅想一下，我们是不是可以通过修改路由表，实现动态的对数据进行转发。
+
+### NAT和路由器
+
+NAT（Network Address Translation，网络地址转换）是一种在计算机网络中使用的技术，它通过改变 IP 地址信息的转换方式来实现不同网络之间的通信。有两种地址转换类型：
+1. SNAT： 改变网络请求数据中源IP地址。
+2. DNAT： 改变了网络请求数据中目标IP地址。
+
+
+如果请求Client的IP是192.168.1.10，请求目标地址10.16.1.11, 请求数据经过路由器时，把SNAT修改为路由器的默认公网IP地址。
+这样目标地址的应用程序处理完成请求会，会根据源IP地址把数据返回。
+
+如果不修改的话，目标地址是无法访问到Client的IP 192.168.1.10的。
+
+所以，路由器会默认修改源IP地址。
+
+
+DNAT技术，一般是结合iptables做数据转发，例如:
+```
+iptables -t nat -A PREROUTING -i eth0 -p tcp --dport 3306 -j DNAT --to-destination <数据库服务器IP>:3306
+```
+这条规则指定任何从eth0接口进入的TCP端口为3306的流量，都应该被重定向到指定的数据库服务器地址和端口。
+
+
+有些特殊请求下，当使用DNAT修改目标地址后，还需要修改SNAT，例如client请求host1, host1通过DNAT转发到Host2：
+
+具体来说，当客户端向Host1发送请求时，请求的源IP地址是客户端的IP地址，目标IP地址是Host1的IP地址。
+
+当Host1把请求转发给Host2的后，Host2处理完成响应数据时，发现源IP依然是client，这肯定无法响应成功。
+
+这种情况下，需要通过SNAT把源请求IP修改为host1，这样host2把数据返回给host1，host1再把数据返回给client。
+
+
+
+
+
+
+
+
+
 
 ### IP网络协议
 
